# homework

./: LICENSE
backend/: .gitignore  Cargo.toml  build.rs
backend/src/: controller.rs  entity.rs  main.rs  service.rs
backend/src/application/: config.rs  error.rs
backend/src/application/config/: test.rs
backend/src/controller/: attachment_controller.rs  payment_controller.rs  recipe_controller.rs  resources_controller.rs  routing.rs
backend/src/entity/: attachment.rs  ingredient.rs  payment.rs  recipe.rs
backend/src/service/: application_service.rs  backup_service.rs
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.vue  main.ts
frontend/src/components/: AttachmentList.vue  Home.vue  HomePage.vue  PaymentList.vue  RecipeList.vue  Toolbar.vue
frontend/src/components/__tests__/: Home.spec.ts
frontend/src/components/general/: DeleteButton.vue  InputFilter.vue
frontend/src/components/payment/: PaymentCreation.vue  PaymentDetails.vue  PaymentEditAttachments.vue  PaymentEditHeader.vue  PaymentEditNote.vue  PaymentEditTags.vue  PaymentEditType.vue  PaymentFilter.vue
frontend/src/components/recipe/: RecipeCard.vue  RecipeCreation.vue  RecipeDetails.vue  RecipeEditAttachments.vue  RecipeEditHeader.vue  RecipeEditIngredient.vue  RecipeEditIngredients.vue  RecipeEditInstructions.vue  RecipeEditTags.vue  RecipeFilter.vue
frontend/src/router/: index.ts
frontend/src/scripts/: messages.ts  types.ts  utilities.ts
frontend/src/views/: AttachmentsView.vue  HomeView.vue  PaymentDetailsView.vue  PaymentView.vue  RecipeDetailsView.vue  RecipesView.vue
