[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "0.6.0"
actix-multipart = "0.4.0"
actix-web = {version="4.0.1", features=["openssl"]}
bigdecimal = { version = "0.3.0", features = ["serde"] }
chrono = { version = "0.4.19", features = ["serde"] }
futures-util = "0.3.21"
openssl = "0.10.38"
sanitize-filename = "0.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.78"
rusqlite = { version = "0.27.0", features = ["bundled", "chrono", "serde_json", "uuid"] }
uuid = { version = "0.8.2", features = ["serde", "v1"] }
