[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-files = "0.6.2"
actix-multipart = "0.4.0"
actix-web = {version="4.2.1", features=["openssl"]}
bigdecimal = { version = "0.3.0", features = ["serde"] }
chrono = { version = "0.4.23", features = ["serde"] }
futures-util = "0.3.25"
getset = "0.1.2"
image = { version = "0.24.5", features = ["webp-encoder"] }
openssl = "0.10.42"
sanitize-filename = "0.4.0"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.88"
rusqlite = { version = "0.28.0", features = ["bundled", "chrono", "serde_json", "uuid"] }
uuid = { version = "1.2.2", features = ["serde", "v1", "v4"] }
